--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -20,7 +21,7 @@
 </head>
 
 <body>
-  <section class="containor">
+  <main class="containor">
     <div class="content">
       <img class="img-part" src="./images/image-qr-code.png" alt="qr-code" width="250px" height="250px">
     </div>
@@ -28,7 +29,7 @@
       <p class="bold-paragraph"><b> Improve your front-end skills by building projects </b></p>
       <p class="light-paragraph">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
-  </section>
+  </main>
   <br>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
