--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <main class="containor">
     <div class="content">
-      <img class="img-part" src="./images/image-qr-code.png" alt="qr-code" width="250px" height="250px">
+      <img class="img-part" src="./images/image-qr-code.png" alt="qr-code" width="250" height="250">
     </div>
     <div class="desc">
       <p class="bold-paragraph"><b> Improve your front-end skills by building projects </b></p>
@@ -31,10 +31,10 @@
     </div>
   </main>
   <br>
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Nebil Nejmudin</a>.
-  </div>
+  </footer>
 </body>
 
 </html>
