--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <img class="img-part" src="./images/image-qr-code.png" alt="qr-code" width="250" height="250">
     </div>
     <div class="desc">
-      <p class="bold-paragraph"><b> Improve your front-end skills by building projects </b></p>
+      <h1 class="bold-paragraph"><b> Improve your front-end skills by building projects </b></h1>
       <p class="light-paragraph">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
   </main>
